[gd_scene load_steps=10 format=3 uid="uid://dx2q8lbxf8t1y"]

[ext_resource type="Script" uid="uid://uy033xj7xuut" path="res://scenes/main_manu.gd" id="1_501nv"]
[ext_resource type="Texture2D" uid="uid://1cfx5yk04bct" path="res://background/background.png" id="2_eckp7"]
[ext_resource type="Texture2D" uid="uid://damdlrhrer28i" path="res://background/logo.png" id="3_eckp7"]
[ext_resource type="FontFile" uid="uid://by3ufvfs0ni3g" path="res://background/GAMERIA.ttf" id="4_m3cu0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3cu0"]
bg_color = Color(0.41568628, 0.7019608, 0.28235295, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.10097168, 0.35666037, 0.17661583, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 600
corner_radius_bottom_right = 16
corner_radius_bottom_left = 600
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc7eb"]
bg_color = Color(0, 0.3254902, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.41568628, 0.7019608, 0.28235295, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 200
corner_radius_bottom_right = 16
corner_radius_bottom_left = 200
shadow_size = 5
shadow_offset = Vector2(3.4, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_501nv"]
bg_color = Color(0.41568628, 0.7019608, 0.28235295, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.3254902, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 600
corner_radius_bottom_right = 16
corner_radius_bottom_left = 600
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqqoy"]
bg_color = Color(0, 0.3254902, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.41568628, 0.7019608, 0.28235295, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 200
corner_radius_bottom_right = 16
corner_radius_bottom_left = 200
shadow_size = 5
shadow_offset = Vector2(3.4, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eckp7"]
bg_color = Color(0.41568628, 0.7019608, 0.28235295, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.3254902, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 600
corner_radius_bottom_right = 16
corner_radius_bottom_left = 600
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[node name="MainManu" type="Node"]
process_mode = 3
script = ExtResource("1_501nv")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eckp7")

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.0
offset_top = -235.0
offset_right = 359.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_eckp7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -34.0
offset_right = 184.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_m3cu0")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_m3cu0")
theme_override_styles/hover = SubResource("StyleBoxFlat_kc7eb")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_m3cu0")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_501nv")
theme_override_styles/hover = SubResource("StyleBoxFlat_nqqoy")
text = "Options
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_m3cu0")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_eckp7")
theme_override_styles/hover = SubResource("StyleBoxFlat_nqqoy")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
